--- a/package.json
+++ b/package.json
@@ -16,8 +16,15 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "clean-webpack-plugin": "^0.1.9",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.16.0",
     "html-webpack-template": "^4.0.0",
+    "node-sass": "^3.6.0",
+    "resolve-url-loader": "^1.4.3",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.12.0"
@@ -26,9 +33,11 @@
     "bootstrap-sass": "^3.3.6",
     "react": "^15.0.2",
     "react-bootstrap": "^0.29.3",
+    "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
     "react-router-bootstrap": "^0.23.0",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "ws": "^1.1.0"
   }
 }
